features login,signup are added and models are created

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
         <ul>
             <li>search <input type="text" name="" id="" placeholder="search your product"></li>
             <li><a href="/login">login</a></li>
-            <li><a href="#">signup</a></li>
+            <li><a href="/signup">signup</a></li>
             <li><a href="#">contact us</a></li>
             <li><a href="#">about us</a></li>
 
